# xindeler

./: .dockerignore  .gitignore  .lfsconfig  .mailmap  CHANGELOG.md  CLAUDE.md  README.md
.claude/agents/: ecs-design-reviewer.md  game-architecture-reviewer.md  game-balance-designer.md  lore-writer.md  npc-persona-writer.md  rust-perf-reviewer.md  sim-design-reviewer.md  sim-systems-engineer.md  worldmap-cartographer.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: env.sh  linux-aarch64.sh  linux-x86_64.sh  util.sh  windows-x86_64.sh
.github/workflows/: benchmarks.yml  build.yml  check-source-branch.yml  check-target-branch.yml  check.yml  docs.yml  mirror.yml  publish-docker.yml  publish-release.yml  release.yml  sync-hotfix.yml  test.yml  translation.yml  upstream-sync.yml
assets/common/: combat_tuning.ron  item_i18n_manifest.ron
assets/lore/: index.ron
assets/voxygen/: item_image_manifest.ron
ci-data/: benchmarks.csv  translations.csv
client/: Cargo.toml  TEST_HARNESS.md  roster.example.ron
common/: Cargo.toml
common/frontend/: Cargo.toml
common/frontend/benches/: telemetry_benchmark.rs
common/frontend/src/: bounded_writer.rs  lib.rs  lifecycle.rs  telemetry_layer.rs
docs/: admin-guide.md
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  manifest.json
scripts/: check-no-design-repo-coupling.sh  check-safety-comments.sh
server/: Cargo.toml
server-cli/: Cargo.toml  Dockerfile.vps  docker-compose.yml
voxygen/: Cargo.toml
world/: Cargo.toml
(+464 files in other folders)
