[package]
name = "veloren-common-frontend"
description = "common stuff that is used by server-cli and voxygen directly"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
tracy = ["common-base/tracy", "tracing-tracy"]
logging-verbose = []

[dependencies]
common-base = { package = "veloren-common-base", path = "../base" }

# Logging
termcolor = "1.1"
tracing = { workspace = true }
tracing-appender = "0.2.0"
tracing-subscriber =  { workspace = true, features = ["tracing-log"] }
flate2 = "1.0"
chrono = { workspace = true }

crossbeam-channel = { workspace = true }

# Tracy
# NOTE: This must be kept in sync with the `profiling` version in `common/base`.
# NOTE: `=` since the minor version of tracing-tracy bumped a major version of `tracy-client`
tracing-tracy = { version = "=0.11.4", optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "telemetry_benchmark"
harness = false
required-features = ["logging-verbose"]
